--- a/PagalbaAisciui.cbp
+++ b/PagalbaAisciui.cbp
@@ -39,6 +39,7 @@
 		</Unit>
 		<Unit filename="_2_pamoka.hpp" />
 		<Unit filename="_3_pamoka.hpp" />
+		<Unit filename="_4_pamoka.hpp" />
 		<Unit filename="data.txt">
 			<Option compilerVar="CC" />
 			<Option virtualFolder="data/" />
