--- a/PagalbaAisciui.cbp
+++ b/PagalbaAisciui.cbp
@@ -44,6 +44,7 @@
 		<Unit filename="_3_pamoka.hpp" />
 		<Unit filename="_4_pamoka.hpp" />
 		<Unit filename="_5_pamoka.hpp" />
+		<Unit filename="_6_pamoka.hpp" />
 		<Unit filename="data.txt">
 			<Option compilerVar="CC" />
 			<Option virtualFolder="data/" />
